--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -2,47 +2,33 @@ name: Update Dependencies
 
 on:
   schedule:
-    # Run weekly on Mondays at 9 AM UTC
-    - cron: '0 9 * * 1'
+    # Run twice a week - Mondays and Fridays at 9 AM Sydney time (11 PM UTC Sunday/Thursday)
+    - cron: '0 23 * * 0,4'  # Sunday 11 PM UTC = Monday 9 AM Sydney, Thursday 11 PM UTC = Friday 9 AM Sydney
   workflow_dispatch: # Allow manual trigger
 
 jobs:
-  update-dependencies:
+  renovate:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+      repository-projects: write
+      statuses: write
+      checks: write
+      actions: read
+      security-events: read
     if: github.repository_owner == 'atlassian-labs'
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Self-hosted Renovate
+        uses: renovatebot/github-action@v40.1.12
         with:
+          configurationFile: .github/renovate.json
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'yarn'
-
-      - name: Update dependencies
-        run: |
-          yarn upgrade --latest
-          yarn install
-
-      - name: Run tests
-        run: |
-          yarn lint
-          yarn test
-          yarn build
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore: update dependencies'
-          title: 'chore: update dependencies'
-          body: |
-            Automated dependency update.
-
-            Please review the changes and ensure all tests pass before merging.
-          branch: chore/update-dependencies
-          delete-branch: true
+        env:
+          RENOVATE_PLATFORM_COMMIT: 'true'
+          LOG_LEVEL: 'debug'
