--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lexicographic/keys",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
@@ -17,7 +17,7 @@
     "lsi",
     "sorted keys"
   ],
-  "public": true,
+  "private": false,
   "contributors": [
     {
       "name": "Daniel Hreben",
