--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,6 @@ jobs:
         run: yarn build
 
       - name: Publish to NPM
-        run: npm publish --provenance --access public
+        run: npm publish --access public #--provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
